// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookButton adds a beforeClick function for the click handler 1`] = `
<ButtonRound
  aria-label="Facebook"
  className="share-button--facebook"
  href="#"
  icon={[Function]}
  label="Facebook"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`FacebookButton does render if boxShadow is true 1`] = `
<ButtonRound
  aria-label="Facebook"
  boxShadow={true}
  className="share-button--facebook"
  href="#"
  icon={[Function]}
  label="Facebook"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`FacebookButton does render if teaser are provided 1`] = `
<ButtonRound
  aria-label="Facebook"
  className="share-button--facebook"
  href="#"
  icon={[Function]}
  label="Facebook"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`FacebookButton does render if utmParams are provided 1`] = `
<ButtonRound
  aria-label="Facebook"
  className="share-button--facebook"
  href="#"
  icon={[Function]}
  label="Facebook"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`FacebookButton renders a round button 1`] = `
<ButtonRound
  aria-label="Facebook"
  className="share-button--facebook"
  href="#"
  icon={[Function]}
  label="Facebook"
  onClick={[Function]}
  role="button"
  title=""
/>
`;
